--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
